# novel-site

./: .air.toml  .gitignore  TODO  db.db  go.mod  go.sum  migration.sql  version
services/scrapper/: main.py  pyproject.toml  pyrightconfig.json
services/scrapper/datatypes/: novel.py
services/scrapper/modules/: config.py  saver.py  utils.py
services/scrapper/modules/parsers/: factory.py  interface.py  novelbinparser.py
services/scrapper/src/scrapper/: config.py  load.py  main.py  scrap.py  seed.py  single_scrap.py  update.py  updater_check.py
services/scrapper/src/scrapper/cache/: db_cache.py
services/scrapper/src/scrapper/datatypes/: get_last_chapter.py  last_chapter_url_data.py  load_server_responses.py  novel.py  novel_fire_chapter.py
services/scrapper/src/scrapper/grpc/: generate_proto.sh  scrapper_pb2.py  scrapper_pb2_grpc.py  updater_pb2.py  updater_pb2_grpc.py
services/scrapper/src/scrapper/grpc/proto/: scrapper.proto  updater.proto
services/scrapper/src/scrapper/grpc_services/: generate_proto.sh  scrapper_pb2.py  scrapper_pb2_grpc.py  updater_pb2.py  updater_pb2_grpc.py
services/scrapper/src/scrapper/helpers/: combine_json_objects_into_array.py  helpers.py  move_files_up_and_delete.py  saver.py  utils.py
services/scrapper/src/scrapper/modules/factories/: factory.py  interface.py
services/scrapper/src/scrapper/modules/loaders/: get_chapter_data.py  get_last_chapter.py  load_from_json.py  log_if_mismatch.py  send_chapters_to_server.py  (+1 more)
services/scrapper/src/scrapper/services/: grpc_server.py  scraper_grpc_server.py  updater_grpc_client.py
(+378 files in other folders)
