[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "botasaurus>=4.0.88",
    "cssselect>=1.3.0",
    "grpcio-tools>=1.75.0",
    "lxml>=6.0.1",
    "mypy-protobuf>=3.6.0",
    "pytest-playwright>=0.7.0",
    "requests>=2.32.5",
]

[project.scripts]
scrapper = "scrapper.scrap:scrapper"
loader = "scrapper.load:loader"
updater = "scrapper.update:update"
seeder = "scrapper.seed:seed"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapper"]
